2009-02-25	Joel Sherrill <joel.sherrill@OARcorp.com>

	* clock/clock.c, include/bsp.h: Make bsp idle thread names match.

2009-02-12	Joel Sherrill <joel.sherrill@oarcorp.com>

	* clock/clock.c, include/bsp.h: Change prototype of IDLE thread to
	consistently return void * and take a uintptr_t argument.

2009-01-21	Eric Norum <norume@aps.anl.gov>

	PR 1358/bsps
	* clock/clock.c: Fix time-access bug in uc5282 BSP.

2008-12-04	Joel Sherrill <joel.sherrill@oarcorp.com>

	* bsp_specs: Move -e start from *link to *startfile to avoid warning
	for undefined entry symbol when linking relocatables with binutils
	2.19.

2008-10-02	Joel Sherrill <joel.sherrill@OARcorp.com>

	* Makefile.am, preinstall.am: Use shared stub coverhd.h
	* include/coverhd.h: Removed.

2008-09-30	Ralf Corsépius <ralf.corsepius@rtems.org>

	* Makefile.am: Eliminate bsp.am. Build startup files as side-effect 
	of building libbspstart.a, using automake-rules.

2008-09-30	Ralf Corsépius <ralf.corsepius@rtems.org>

	* clock/clock.c: include "../../../shared/clockdrv_shell.h".
	* Makefile.am: Reflect changes above.

2008-09-29	Ralf Corsépius <ralf.corsepius@rtems.org>

	* Makefile.am: Eliminate *_SOURCES.

2008-09-29	Ralf Corsépius <ralf.corsepius@rtems.org>

	* Makefile.am: Move noinst_LIBRARIES = libbsp.a before its
	components.

2008-09-26	Ralf Corsépius <ralf.corsepius@rtems.org>

	* Makefile.am: Cleanup ../../shared/include/bootcard.h handling.

2008-09-23	Joel Sherrill <joel.sherrill@oarcorp.com>

	* configure.ac: Make letting boot_card() handle work area allocation
	mandatory. Rename RTEMS_BSP_BOOTCARD_HANDLES_RAM_ALLOCATION to
	BSP_BOOTCARD_OPTIONS.

2008-09-23	Joel Sherrill <joel.sherrill@oarcorp.com>

	* Makefile.am, configure.ac, include/bsp.h, startup/bspstart.c: Rename
	existing bsp_reset() to bsp_sysReset() since the prototype did not
	match the standard one. Add standard bsp_reset().
	* startup/bspreset.c: New file.

2008-09-18	Joel Sherrill <joel.sherrill@oarcorp.com>
